# speech-provider-piper

./: .gitignore  Cargo.toml  README.md  build.rs  cargo.py  meson.build  meson_options.txt  speech-provider-piper.py.in
.github/workflows/: build-repo.yml
build-aux/: ai.piper.Speech.Provider.json  build_voices.sh  generate_voice_manifests.py  piper-cargo-source.json  python3-dasbus.json
data/: ai.piper.Speech.Provider.metainfo.xml  ai.piper.Speech.Provider.service.in
speech_provider_piper/: main.py  version.py
src/: main.rs  meson.build
