[package]
name = "speech-provider-piper"
version = "0.1.0"
edition = "2021"

[dependencies]
sonata-synth = { git = "https://github.com/eeejay/sonata.git" }
sonata-piper = { git = "https://github.com/eeejay/sonata.git" }
serde_json = "1.0.116"
ort = { version="2.0.0-rc.1" }
glob = "0.3.1"
async-std = { version = "1.12.0", features =  ["attributes"] }
serde = "1.0.201"
anyhow = "1.0.83"
speechprovider = { git = "https://github.com/project-spiel/rust-bindings.git", package = "speechprovider" }
zbus = "3.13"
zvariant = "3.6"
oxilangtag = "0.1.5"
